# conveyor-belt

./: .coverage  .dockerignore  .gitignore  BUILD  CLAUDE.md  Dockerfile  LESSONS_LEARNT.md  LICENSE  Makefile  README.md  WORKSPACE  context-file.md  conveyor-belt.yaml  pyproject.toml
.github/workflows/: conveyor-belt.yml  deploy.yml
.warp/skills/conveyor-belt-dev/: SKILL.md
ci_adapters/bazel/: BUILD  defs.bzl  run_cb.sh
ci_adapters/circleci/: config.yml
ci_adapters/jenkins/: Jenkinsfile
conveyor_belt/: __init__.py  cli.py  config.py  context.py  models.py  orchestrator.py  server.py
conveyor_belt/agents/: base.py  feature_agent.py  regression_agent.py  security_agent.py
conveyor_belt/integrations/: git.py  linear.py  snyk.py
conveyor_belt/static/: index.html
conveyor_belt/stations/: base.py  feature_validation.py  idiomatic.py  regression.py  security.py  unit_coverage.py  vulnerability.py
docs/: INTEGRATION.md  README.md  context-file.md
infra/terraform/: alb.tf  backend.tf  backend.tf.example  ecr.tf  ecs.tf  github_oidc.tf  iam.tf  locals.tf  logs.tf  networking.tf  outputs.tf  security_groups.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: pre-commit
tests/unit/: test_agents.py  test_cli.py  test_integrations_and_orchestrator.py  test_models_config.py  test_server.py  test_station_idiomatic.py  test_station_unit_coverage.py  test_station_vulnerability.py  test_stations_agent_based.py
