[tool.poetry]
name = "conveyor-belt"
version = "0.1.0"
description = "Agentic conveyor-belt QA pipeline for code check-ins"
authors = ["krishnaatkuru"]
readme = "docs/README.md"
packages = [{ include = "conveyor_belt" }]

[tool.poetry.scripts]
cb = "conveyor_belt.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
pyyaml = "^6.0"
pydantic = "^2.6"
httpx = "^0.27"
langchain-core = "^0.3"
langchain-anthropic = "^0.3"
langchain-google-genai = "^2.1"
rich = "^13.7"
fastapi = "^0.111"
uvicorn = {version = "^0.29", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
